Small fixes on nav bars

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
           <div class="col-sm-12" >
             <h1> <span class="hero-text" >Hi there!</span></h1>
             <h1><a href="About.html" class="hero-text">I'm Jackson.</a></h1>
-            <p><span class="copy-emphasis">Digital product designer</span> from Ann Arbor. <br>I want to create better experiences <span class="copy-emphasis">for people.</span></p>
+            <p>
+              <span class="copy-emphasis">Digital product designer</span> from Ann Arbor.<br>
+              <span class="copy-emphasis">UX Design Fellow</span> at Michigan's Office of Academic Innovation.<br>
+              I want to create better experiences <span class="copy-emphasis">for people.</span>
+          </p>
           </div>
         </div>
       </div>
@@ -85,8 +89,19 @@
               <a href = "projects/Autodesk_Consulting.html">
                 <img src = "assets/Autodesk_Consulting/Autodesk_logo_dark.jpg" alt="Autodesk Consulting" class = "project-image">
                 <div class = "caption">
-                  <p class="project-name">Great Lakes Legends</p>
-                  <p class="project-type">Product Design</p>
+                  <p class="project-name">Consulting with Autodesk</p>
+                  <p class="project-type">User Experience Research</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class = "col-lg-4 col-md-6 col-sm-12">
+            <div class = "thumbnail project-card mx-auto">
+              <a href = "projects/development_projects.html">
+                <img src = "assets/development_projects/code_sample.png" alt="My Dev projects" class="project-image">
+                <div class = "caption">
+                  <p class="project-name">My Development Projects</p>
+                  <p class="project-type">Web Development</p>
                 </div>
               </a>
             </div>
