--- a/projects/development_projects.html
+++ b/projects/development_projects.html
@@ -51,12 +51,12 @@
         <div class = "container">
           <div class = "row justify-content-center">
             <div class="col-sm-10 col-center">
-              <h1>Consulting with Autodesk</h1>
-              <p>A project focused on user research, needs assessment, and usability testing by Corzetti Labs.</p>
+              <h1>Web Development Projects</h1>
+              <p>Small, one-off projects I've worked on to practice my web development skills.</p>
               <p>
-                <span class="copy-emphasis">Role:</span> UX Researcher and Usability Tester<br>
-                <span class="copy-emphasis">Tools:</span> Revit LT<br>
-                <span class="copy-emphasis">Timeframe:</span> Jan. 2019 - Apr. 2019
+                <span class="copy-emphasis">Role:</span> Designer and Developer<br>
+                <span class="copy-emphasis">Tools:</span> Python, Flask, Django, React<br>
+                <span class="copy-emphasis">Timeframe:</span> Varied
               </p>
             </div>
           </div>
@@ -66,19 +66,16 @@
       <div class="container">
         <div class="row justify-content-center project-section">
           <div class="col-sm-10 mb-5">
-            <h4 class="project-section-header" id="placeHolder">PROJECT SUMMARY</h4>
+            <h4 class="project-section-header" id="placeHolder">PROJECT ONE</h4>
           </div>
         </div>
         <div>
           <div class="row justify-content-center">
             <div class="col-sm-5 mb-5">
-              <p>My team, Corzetti Labs, and I have partnered with Autodesk to assess the learning and onboarding materials for their Revit LT software, a program designed for architects to model their designs in three dimensions. They are interested to learn how well supported new Revit LT users are with the learning content available to them, as well as how discoverable and useful it is for users.</p>
-              <p>The key user groups they're interested in are new users to Revit who don't have any prior CAD experience, primarily undergraduate architectural students, and architects who switch from other CAD software to Revit LT.</p>
-              <p>Over the new few weeks our team will be completing a competitive analysis and conducting interviews with Autodesk's intended user groups. We'll follow that up with a hueristic evaluation and usability tests, and synthesize our results in a final video presentation for the Autodesk team.</p>
-              <p>Stay tuned for updates from the Corzetti team!</p>
+              <p>I've been working on a few web development projects to practice designing tools and then implementing them myself. Stay tuned for this page to get filled in!</p>
             </div>
             <div class="col-sm-5 mb-5">
-              <img src="../assets/Autodesk_Consulting/Autodesk_logo_dark_original.jpg" class="img-fluid" alt="Autodesk logo">
+              <img src="../assets/development_projects/code_sample.png" class="img-fluid" alt="Sample of my code">
             </div>
           </div>
         </div>
