Fixed a nav bar link

--- a/About.html
+++ b/About.html
@@ -32,7 +32,7 @@
 
     <div class="container">
       <div class="myNavBar" id="myTopnav">
-        <a class="navbar-brand" aria-label="My Logo" href="#">
+        <a class="navbar-brand" aria-label="My Logo" href="index.html">
           <img src="assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
         <a href="assets/Jackson_Hammond_Resume.pdf">RESUME</a>
