Updating the latest two projects

--- a/projects/development_projects.html
+++ b/projects/development_projects.html
@@ -51,32 +51,55 @@
         <div class = "container">
           <div class = "row justify-content-center">
             <div class="col-sm-10 col-center">
-              <h1>Web Development Projects</h1>
-              <p>Small, one-off projects I've worked on to practice my web development skills.</p>
-              <p>
+              <h1>Development Projects</h1>
+              <p>Smaller, one-off projects I've worked on to practice my web development skills.</p>
+              <!-- <p>
                 <span class="copy-emphasis">Role:</span> Designer and Developer<br>
                 <span class="copy-emphasis">Tools:</span> Python, Flask, Django, React<br>
                 <span class="copy-emphasis">Timeframe:</span> Varied
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
       </div>
 
       <div class="container">
-        <div class="row justify-content-center project-section">
+        <div class="row justify-content-center">
           <div class="col-sm-10 mb-5">
-            <h4 class="project-section-header" id="placeHolder">PROJECT ONE</h4>
+            <h4 class="project-section-header" id="placeHolder">SEMESTER PLANNING APP</h4>
           </div>
         </div>
-        <div>
-          <div class="row justify-content-center">
-            <div class="col-sm-5 mb-5">
-              <p>I've been working on a few web development projects to practice designing tools and then implementing them myself. Stay tuned for this page to get filled in!</p>
-            </div>
-            <div class="col-sm-5 mb-5">
-              <img src="../assets/development_projects/code_sample.png" class="img-fluid" alt="Sample of my code">
-            </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-10">
+            <h5>Quick Facts</h5>
+            <p>
+              <span class="copy-emphasis">GitHub Repo:</span> Link to come<br>
+              <span class="copy-emphasis">Front End:</span> React<br>
+              <span class="copy-emphasis">Back End:</span> Python with Django, hosted on Heroku<br>
+              <span class="copy-emphasis">Timeline:</span> Jun. 2019 - Present
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-10 mb-5">
+            <h5>Motivation</h5>
+            <p>This Semester Planning project grew out of my own need as well as what I learned from other students when I was working as a research assistant at the University of Michigan School of Information's Learning, Education, and Design (LED) Lab. The LED lab had created a "Learning Analytics" dashboard and piloted it with three UM classes, and I interviewed some of those students at the end of the semester about their experiences.</p>
+            <p>We saw that the dashboard was able to help students plan and monitor their progress for one class, but expressed a strong desire for a tool to help them plan their work, both short- and long-term, across all their classes. I spun those findings into my own project here.</p>
+            <p>The goal of this web app is to give students a tool to visualize their work load day-to-day and week-to-week across an entire semester for all of their classes. Ideally it will help students avoid unexpectantly overloading themselves and give them a greater sense of agency over their time and studies.</p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-10 mb-5">
+            <h5>Current State</h5>
+            <p>Currently I'm laying out the database models the app will need and designing the visual identity. Below are the most current sketches of the sitemap and dashboard students will be presented.
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-6">
+            <img src="../assets/development_projects/semester_planning_sitemap_sketch.png" class="img-fluid" alt="The initial sitemap">
+          </div>
+          <div class="col-sm-6">
+            <img src="../assets/development_projects/semester_planning_dashboard_sketch.png" class="img-fluid" alt="The initial sitemap">
           </div>
         </div>
       </div>
