--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -64,22 +64,66 @@
       </div>
 
       <div class="container">
-        <div class="row justify-content-center project-section">
+        <div class="row justify-content-center ">
           <div class="col-sm-10 mb-5">
             <h4 class="project-section-header" id="placeHolder">PROJECT SUMMARY</h4>
           </div>
         </div>
-        <div>
-          <div class="row justify-content-center">
-            <div class="col-sm-5 mb-5">
-              <p>My team, Corzetti Labs, and I have partnered with Autodesk to assess the learning and onboarding materials for their Revit LT software, a program designed for architects to model their designs in three dimensions. They are interested to learn how well supported new Revit LT users are with the learning content available to them, as well as how discoverable and useful it is for users.</p>
-              <p>The key user groups they're interested in are new users to Revit who don't have any prior CAD experience, primarily undergraduate architectural students, and architects who switch from other CAD software to Revit LT.</p>
-              <p>Over the new few weeks our team will be completing a competitive analysis and conducting interviews with Autodesk's intended user groups. We'll follow that up with a hueristic evaluation and usability tests, and synthesize our results in a final video presentation for the Autodesk team.</p>
-              <p>Stay tuned for updates from the Corzetti team!</p>
-            </div>
-            <div class="col-sm-5 mb-5">
-              <img src="../assets/Autodesk_Consulting/Autodesk_logo_dark_original.jpg" class="img-fluid" alt="Autodesk logo">
-            </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-5 mb-5">
+            <p>My team, Corzetti Labs, and I partnered with Autodesk to assess the learning and onboarding materials for their Revit LT software, a program designed for architects to model their designs in three dimensions. They were interested to learn how well supported new Revit LT users are with the learning content available to them, as well as how discoverable and useful it is for users.</p>
+            <p>The key user groups they were interested in are were Revit LT users who don't have any prior CAD experience, primarily undergraduate architectural students, and architects who switch from other CAD software to Revit LT.</p>
+          </div>
+          <div class="col-sm-5 mb-5">
+            <img src="../assets/Autodesk_Consulting/Autodesk_logo_dark_original.jpg" class="img-fluid" alt="Autodesk logo">
+          </div>
+        </div>
+        <div class="row justify-content-center ">
+          <div class="col-sm-10 mb-5">
+            <h4 class="project-section-header" id="placeHolder2">RESEARCH PROCESS</h4>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-10 mb-5">
+            <p>Below I outlined all the research techniques we used throughout the process, what we learned, and how we applied our findings to later portions of the project.</p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-12">
+            <img src="../assets/Autodesk_Consulting/process_flowchart.png" class="img-fluid" alt="Flowchart for the group project">
+          </div>
+        </div>
+        <div class="row justify-content-center ">
+          <div class="col-sm-10 mb-5">
+            <h4 class="project-section-header" id="placeHolder2">OVERALL FINDINGS</h4>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-10 mb-5">
+            <p>At the end of our research we presented our main findings and recommendations to our counterparts at Autodesk. Our main findings were as follows:</p>
+            <ul>
+              <li>Regardless of users’ experience with Revit or Revit LT, the search functionality was utilized more than organic browsing through the sidebar navigation.</li>
+              <li>Users preferred a walkthrough-style approach to tutorial materials.</li>
+              <li>Users often overlooked the provided help documentation within Revit LT.</li>
+              <li>Usability tests showed users of varying experience had mixed opinions about the suggested workflows and documentation examples.</li>
+            </ul>
+            <p>Given these findings, we recommended they do the following:</p>
+            <ul>
+              <li>Redesign the help site to focus on searching as the first action, rather than clicking through thumbnails or navigation links.</li>
+              <li>Make it more apparent within the software how users can learn more about using Revit LT, such as how Adobe XD helps its new users.</li>
+              <li>Examples used to explain the how or why of the workflows should always be relevant and focused on the work that Revit LT users will be conducting.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="row justify-content-center ">
+          <div class="col-sm-10 mb-5">
+            <h4 class="project-section-header" id="placeHolder2">LESSONS LEARNED</h4>
+          </div>
+        </div>
+        <div class="row justify-content-center ">
+          <div class="col-sm-10 mb-5">
+            <p>This was a large-scale project and our research group certainly learned a great deal together. We saw recruiting users is difficult to get right for many reasons. It's hard to identify the characteristics you should search for to find research participants, and even more difficult to convince them being a participant is worth their time. Short timelines can also force you to make compromises. For instance, we ran out of time to recruit any professional architects for our usability tests, and had to settle for testing with five college students.</p>
+            <p>Additionally, this was the first project that asked me to present my UX research and design work to stakeholders with no such background. Each report we submitted needed to speak plainly but directly to our findings. UX designers and researchers never work in a vacuum, and communicating my findings to a diverse group gave me experience I can take forward to future projects.</p>
           </div>
         </div>
       </div>
