Adding my 507 project to dev projects page

--- a/projects/development_projects.html
+++ b/projects/development_projects.html
@@ -53,17 +53,40 @@
             <div class="col-sm-10 col-center">
               <h1>Development Projects</h1>
               <p>Smaller, one-off projects I've worked on to practice my web development skills.</p>
-              <!-- <p>
-                <span class="copy-emphasis">Role:</span> Designer and Developer<br>
-                <span class="copy-emphasis">Tools:</span> Python, Flask, Django, React<br>
-                <span class="copy-emphasis">Timeframe:</span> Varied
-              </p> -->
             </div>
           </div>
         </div>
       </div>
 
       <div class="container">
+
+        <div class="row justify-content-center">
+          <div class="col-sm-10 mb-5">
+            <h4 class="project-section-header" id="placeHolder">SI 507 FINAL PROJECT</h4>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-10">
+            <h5>Quick Facts</h5>
+            <p>
+              <span class="copy-emphasis">GitHub Repo:</span> <a href="https://github.com/jbhammon/si507_final_project">Link</a><br>
+              <span class="copy-emphasis">Front End:</span> Bootstrap<br>
+              <span class="copy-emphasis">Back End:</span> Python with Flask<br>
+              <span class="copy-emphasis">Timeline:</span> Mar. - Apr. 2019
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-5 mb-5">
+            <h5>Motivation</h5>
+            <p>This project was the culmination of many skills we learned in the intermediate python programming course I took. It allows users to build a "party" of Pokemon for the traditional Pokemon RPG games, and tells them stats about the party as they add members. Flask and SQLAlchemy are used to handle reading and writing to the SQLite database. The class was not focused on web or graphic design so the frontend ended up very simple, and relies mostly on Bootstrap's default styling. All details about how to clone and run the code locally are included in the repo's README.</p>
+          </div>
+          <div class="col-sm-5 mb-5">
+            <img src="../assets/development_projects/507_dashboard_view.png" class="img-fluid" alt="View of the dashboard with a complete team">
+          </div>
+        </div>
+
+
         <div class="row justify-content-center">
           <div class="col-sm-10 mb-5">
             <h4 class="project-section-header" id="placeHolder">SEMESTER PLANNING APP</h4>
