file structure reorganization

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- sitewide styling -->
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="styles/css/base.css">
     <!-- page-specific styling -->
 
     <!-- Typefaces -->
@@ -42,15 +42,15 @@
 
     <footer>
       <div class='container'>
-        <h6>Feel free to reach out if you want to connect or just say hi!</h6>
+        <p>Feel free to reach out if you want to connect or just say hi!</p>
         <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
-        <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
+        <small class="footer-copyright">&#169; 2019 Jackson Hammond</small>
       </div>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--- My JavaScript --->
-    <script src="myscripts.js"></script>
+    <script src="scripts/myscripts.js"></script>
 
   </body>
 </html>
