--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             <h1> <span class="hero-text" >Hi there!</span></h1>
             <h1><a href="About.html" class="hero-text">I'm Jackson.</a></h1>
             <p>
-              <span class="copy-emphasis">Digital product designer</span> from Ann Arbor.<br>
-              <span class="copy-emphasis">UX Design Fellow</span> at Michigan's Office of Academic Innovation.<br>
-              I want to create better experiences <span class="copy-emphasis">for people.</span>
+              <span class="copy-emphasis">Digital product designer & developer</span> from Ann Arbor.<br>
+              Check out my development work <span class="copy-emphasis"><a href= 'https://github.com/jbhammon' target='_blank'>here on Github.</a></span><br>
+              Read about my other <span class="copy-emphasis">design projects below.</span>
           </p>
           </div>
         </div>
