added coming soon cards

--- a/index.html
+++ b/index.html
@@ -106,6 +106,26 @@
               </a>
             </div>
           </div>
+          <div class = "col-lg-4 col-md-6 col-sm-12">
+            <div class = "thumbnail project-card mx-auto">
+              <a href = "#">
+                <img src = "assets/Thumbnails/coming_soon.png" alt="Unfinished school project card" class="project-image">
+                <div class = "caption">
+                  <p class="project-name">Winter 2019 Semester Projects</p>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class = "col-lg-4 col-md-6 col-sm-12">
+            <div class = "thumbnail project-card mx-auto">
+              <a href = "#">
+                <img src = "assets/Thumbnails/coming_soon.png" alt="Unfinished project card" class="project-image">
+                <div class = "caption">
+                  <p class="project-name">UX Design Summer Internship</p>
+                </div>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
 
