initial thumbnail styles completed

--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
 
       <div class='container'>
         <div class='homepage-header'>
-          <p><span class="hero-text" >Hi there!</span></p>
-          <p><a href="About.html" class="hero-text">I'm Jackson.</a></p>
-          <p><span class="copy-emphasis">Digital product designer</span> from Ann Arbor.</p>
-          <p><span class="copy-emphasis">UX Design Fellow</span> at Michigan's Office of Academic Innovation.</p>
-          <p>I want to create better experiences <span class="copy-emphasis">for people.</span></p>
+          <h1>Hello -</h1>
+          <h3><a href='About.html' style='text-decoration: none; color: #313131'>I'm Jackson</a> and I'm a digital product designer.</h3>
+          <p style='font-size:19px'>I focus on how technology can deliver better information to improve people's lives and communities. I'm currently a master's student at the University of Michigan, and I'm searching for full-time positions.</p>
         </div>
 
         <div class='row'>
@@ -60,15 +58,19 @@
             <a href='projects/3D_Emergency.html'>
               <img class='thumbnail' src='assets/Thumbnails/3DE_cropped_thumbnail.png'>
             </a>
-            <p>3D Emergency</p>
-            <p>UX Design and Research</p>
+            <div class='project-label'>
+              <h2>3D Emergency</h2>
+              <h4>UX Design and Research</h4>
+            </div>
           </div>
           <div class='col-half'>
             <a href='projects/3D_Emergency.html'>
               <img class='thumbnail' src='assets/Thumbnails/3DE_cropped_thumbnail.png'>
             </a>
-            <p>3D Emergency</p>
-            <p>UX Design and Research</p>
+            <div class='project-label'>
+              <h2>3D Emergency</h2>
+              <h4>UX Design and Research</h4>
+            </div>
           </div>
         </div>
       </div>
