footer and other various stylings are complete

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class='homepage-header'>
           <h1>Hello -</h1>
           <h3><a href='About.html' style='text-decoration: none; color: #313131'>I'm Jackson</a> and I'm a digital product designer.</h3>
-          <p style='font-size:19px'>I focus on how technology can deliver better information to improve people's lives and communities. I'm currently a master's student at the University of Michigan, and I'm searching for full-time positions.</p>
+          <p>I focus on how technology can deliver better information to improve people's lives and communities. I'm currently a master's student at the University of Michigan, and I'm searching for full-time positions.</p>
         </div>
 
         <div class='row'>
@@ -78,10 +78,21 @@
     </main>
 
     <footer>
-      <div class='container'>
-        <p>Feel free to reach out if you want to connect or just say hi!</p>
-        <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
-        <small class="footer-copyright">&#169; 2019 Jackson Hammond</small>
+      <div class='containter'>
+        <div class='footer'>
+          <div class ='condensed-text-wrapper' style='margin-bottom: 2rem;'>
+            <p>Connect with me</p>
+            <p>
+              <a href="mailto:jbhammon@umich.edu">email.</a>
+              <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target='_blank'>linkedin.</a>
+              <a href="https://github.com/jbhammon" target='_blank'>github.</a>
+            </p>
+          </div>
+          <div class='copy-low-emphasis condensed-text-wrapper'>
+            <p>Built with ❤️ in Ann Arbor</p>
+            <p class="footer-copyright">&#169; 2019 Jackson Hammond</p>
+          </div>
+        </div>
       </div>
     </footer>
 
