final style edits to 3de project

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -28,7 +28,7 @@
     <!-- icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Jackson Hammond</title>
+    <title>3D Emergency</title>
 
   </head>
 
@@ -51,26 +51,37 @@
 
       <div class = "container">
         <div class='row'>
-          <div class='header col-full'>
-            <h1>3D Emergency</h1>
-            <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.</p>
-            <p>
-              <span class="copy-emphasis">Role:</span> UX Designer and Researcher<br>
-              <span class="copy-emphasis">Tools:</span> Adobe Illustrator and Adobe XD<br>
-              <span class="copy-emphasis">Timeframe:</span> Sep. 2018 - Dec. 2018
-            </p>
+          <div class='project-title col-full'>
+            <h1 class='project-name'>3D Emergency</h1>
+            <h1 class='project-subtitle'>Get help faster.</h1>
+          </div>
+          <div class='col-half'>
+            <div class='project-summary'>
+              <h3>Overview</h3>
+              <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.</p>
+            </div>
+            <div class='project-summary'>
+              <h3>Role</h3>
+              <p>UX Designer and Researcher</p>
+            </div>
+            <div class='project-summary'>
+              <h3>Tools</h3>
+              <p>Adobe Illustrator and Adobe XD</p>
+            </div>
+            <div class='project-summary'>
+              <h3>Timeframe</h3>
+              <p>Sep. 2018 - Dec. 2018</p>
+            </div>
+          </div>
+          <div class='col-half'>
+            <img src="../assets/3D_Emergency/mobile_screen_mockup_collage.png" class="img-fluid" alt="Screenshots on generic mockups">
           </div>
         </div>
-      </div>
-
-      <div class='container'>
-        <img src="../assets/3D_Emergency/mobile_screen_mockup_collage.png" class="img-fluid" alt="Screenshots on generic mockups">
       </div>
 
       <div class="container">
         <div class='row'>
           <div class='text-wrapper'>
-            <h2>Summary</h2>
             <h3>Inspiration</h3>
             <p>I toured a local 911 center, and their primary concern was call processing time, or how long their operators spent speaking with each caller. I saw how much of the work was still done manually, and knew that meant more time callers had to spend on hold.</p>
             <h3>Design Goal</h3>
