small copy update

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -62,7 +62,8 @@
             </div>
             <div class='project-summary'>
               <h3>Role</h3>
-              <p>UX Designer and Researcher</p>
+              <p>User Experience Designer</p>
+              <p>User Interface Designer</p>
             </div>
             <div class='project-summary'>
               <h3>Tools</h3>
