New thumbnail styles

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <a class="navbar-brand" aria-label="My Logo" href="#">
           <img src="assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
-        <a href="#news">RESUME</a>
-        <a href="#contact">ABOUT</a>
-        <a href="#about">WORK</a>
+        <a href="assets/Jackson_Hammond_Resume.pdf">RESUME</a>
+        <a href="About.html">ABOUT</a>
+        <a href="#">WORK</a>
         <a href="javascript:void(0);" class="icon" onclick="navBarHandling()">
           <i class="fa fa-bars"></i>
         </a>
@@ -56,21 +56,21 @@
         <div class='row'>
           <div class='col-half'>
             <a href='projects/3D_Emergency.html'>
-              <img class='thumbnail' src='assets/Thumbnails/3DE_cropped_thumbnail.png'>
+              <img class='thumbnail' src='assets/Thumbnails/3de_thumbnail.png'>
             </a>
-            <div class='project-label'>
+            <!-- <div class='project-label'>
               <h2>3D Emergency</h2>
               <h4>UX Design and Research</h4>
-            </div>
+            </div> -->
           </div>
           <div class='col-half'>
-            <a href='projects/3D_Emergency.html'>
-              <img class='thumbnail' src='assets/Thumbnails/3DE_cropped_thumbnail.png'>
+            <a href='projects/Autodesk_Consulting.html'>
+              <img class='thumbnail' src='assets/Thumbnails/622.png'>
             </a>
-            <div class='project-label'>
-              <h2>3D Emergency</h2>
-              <h4>UX Design and Research</h4>
-            </div>
+            <!-- <div class='project-label'>
+              <h2>Learning Revit LT</h2>
+              <h4>User Experience Research</h4>
+            </div> -->
           </div>
         </div>
       </div>
