--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -38,12 +38,12 @@
       <!-- Navbar, courtesy of W3Schools -->
       <!-- https://www.w3schools.com/howto/howto_js_topnav_responsive.asp -->
       <div class="topnav" id="myTopnav">
-        <a class="navbar-brand" aria-label="My Logo" href="#">
+        <a class="navbar-brand" aria-label="My Logo" href="../index.html">
           <img src="../assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
-        <a href="#news">RESUME</a>
-        <a href="#contact">ABOUT</a>
-        <a href="#about">WORK</a>
+        <a href="../assets/Jackson_Hammond_Resume.pdf">RESUME</a>
+        <a href="../About.html">ABOUT</a>
+        <a href="../index.html">WORK</a>
         <a href="javascript:void(0);" class="icon" onclick="navBarHandling()">
           <i class="fa fa-bars"></i>
         </a>
