--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -16,90 +16,91 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <!-- sitewide styling -->
+    <link rel="stylesheet" type="text/css" href="../styles/css/base.css">
+    <!-- page-specific styling -->
+    <link rel="stylesheet" type="text/css" href="../styles/css/projects.css">
 
-    <link rel = "stylesheet" type = "text/css" href = "../main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
+    <!-- Typefaces -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-    <!-- Add icon library -->
+    <!-- icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Jackson Hammond</title>
+    <title>Learning Revit LT</title>
 
   </head>
 
   <body>
 
-    <div class="container">
-      <div class="myNavBar" id="myTopnav">
+    <main role="main">
+      <!-- Navbar, courtesy of W3Schools -->
+      <!-- https://www.w3schools.com/howto/howto_js_topnav_responsive.asp -->
+      <div class="topnav" id="myTopnav">
         <a class="navbar-brand" aria-label="My Logo" href="../index.html">
           <img src="../assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
         <a href="../assets/Jackson_Hammond_Resume.pdf">RESUME</a>
         <a href="../About.html">ABOUT</a>
         <a href="../index.html">WORK</a>
-        <a href="javascript:void(0);" aria-label="Hamburger menu" class="icon" onclick="navBarHandling()">
+        <a href="javascript:void(0);" class="icon" onclick="navBarHandling()">
           <i class="fa fa-bars"></i>
         </a>
       </div>
-    </div>
 
-    <main role="main">
-      <div class="div-buffer-help"></div>
-      <div class="jumbotron project-jumbotron d-flex align-items-center">
-        <div class = "container">
-          <div class = "row justify-content-center">
-            <div class="col-sm-10 col-center">
-              <h1>Consulting with Autodesk</h1>
+      <div class = "container">
+        <div class='row'>
+          <div class='project-title col-full'>
+            <h1 class='project-name'>Learning Revit LT</h1>
+            <h1 class='project-subtitle'>Evaluating onboarding resources.</h1>
+          </div>
+          <div class='col-half'>
+            <div class='project-summary'>
+              <h3>Overview</h3>
               <p>A project focused on user research, needs assessment, and usability testing by Corzetti Labs.</p>
-              <p>
-                <span class="copy-emphasis">Role:</span> UX Researcher and Usability Tester<br>
-                <span class="copy-emphasis">Tools:</span> Revit LT<br>
-                <span class="copy-emphasis">Timeframe:</span> Jan. 2019 - Apr. 2019
-              </p>
             </div>
+            <div class='project-summary'>
+              <h3>Role</h3>
+              <p>User Experience Researcher</p>
+              <p>Usability Tester</p>
+            </div>
+            <div class='project-summary'>
+              <h3>Tools</h3>
+              <p>Revit LT</p>
+            </div>
+            <div class='project-summary'>
+              <h3>Timeframe</h3>
+              <p>Jan. 2019 - Apr. 2019</p>
+            </div>
+          </div>
+          <div class='col-half'>
+            <img src='../assets/Autodesk_Consulting/Autodesk_logo_dark_original.jpg' alt="Autodesk Logo">
           </div>
         </div>
       </div>
 
       <div class="container">
-        <div class="row justify-content-center ">
-          <div class="col-sm-10 mb-5">
-            <h4 class="project-section-header" id="placeHolder">PROJECT SUMMARY</h4>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-sm-5 mb-5">
+        <div class="row">
+          <div class="text-wrapper">
+            <h2>Project Summary</h2>
             <p>My team, Corzetti Labs, and I partnered with Autodesk to assess the learning and onboarding materials for their Revit LT software, a program designed for architects to model their designs in three dimensions. They were interested to learn how well supported new Revit LT users are with the learning content available to them, as well as how discoverable and useful it is for users.</p>
             <p>The key user groups they were interested in are were Revit LT users who don't have any prior CAD experience, primarily undergraduate architectural students, and architects who switch from other CAD software to Revit LT.</p>
           </div>
-          <div class="col-sm-5 mb-5">
-            <img src="../assets/Autodesk_Consulting/Autodesk_logo_dark_original.jpg" class="img-fluid" alt="Autodesk logo">
-          </div>
         </div>
-        <div class="row justify-content-center ">
-          <div class="col-sm-10 mb-5">
-            <h4 class="project-section-header" id="placeHolder2">RESEARCH PROCESS</h4>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-sm-10 mb-5">
+
+        <div class='row'>
+          <div class='text-wrapper'>
+            <h2>Research Process</h2>
             <p>Below I outlined all the research techniques we used throughout the process, what we learned, and how we applied our findings to later portions of the project.</p>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-sm-12">
-            <img src="../assets/Autodesk_Consulting/process_flowchart.png" class="img-fluid" alt="Flowchart for the group project">
-          </div>
+
+        <div class='row'>
+            <img src="../assets/Autodesk_Consulting/process_flowchart.png" alt="Flowchart for the group project">
         </div>
-        <div class="row justify-content-center ">
-          <div class="col-sm-10 mb-5">
-            <h4 class="project-section-header" id="placeHolder2">OVERALL FINDINGS</h4>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-sm-10 mb-5">
+        <div class='row'>
+          <div class='text-wrapper'>
+            <h2>Overall Findings</h2>
             <p>At the end of our research we presented our main findings and recommendations to our counterparts at Autodesk. Our main findings were as follows:</p>
             <ul>
               <li>Regardless of users’ experience with Revit or Revit LT, the search functionality was utilized more than organic browsing through the sidebar navigation.</li>
@@ -115,13 +116,9 @@
             </ul>
           </div>
         </div>
-        <div class="row justify-content-center ">
-          <div class="col-sm-10 mb-5">
-            <h4 class="project-section-header" id="placeHolder2">LESSONS LEARNED</h4>
-          </div>
-        </div>
-        <div class="row justify-content-center ">
-          <div class="col-sm-10 mb-5">
+        <div class='row'>
+          <div class='text-wrapper'>
+            <h2>Lessons Learned</h2>
             <p>This was a large-scale project and our research group certainly learned a great deal together. We saw recruiting users is difficult to get right for many reasons. It's hard to identify the characteristics you should search for to find research participants, and even more difficult to convince them being a participant is worth their time. Short timelines can also force you to make compromises. For instance, we ran out of time to recruit any professional architects for our usability tests, and had to settle for testing with five college students.</p>
             <p>Additionally, this was the first project that asked me to present my UX research and design work to stakeholders with no such background. Each report we submitted needed to speak plainly but directly to our findings. UX designers and researchers never work in a vacuum, and communicating my findings to a diverse group gave me experience I can take forward to future projects.</p>
           </div>
@@ -131,23 +128,27 @@
     </main>
 
     <footer>
-      <div class="container">
-        <h6>Feel free to reach out if you want to connect or just say hi!</h6>
-        <a class="footer-email" href="mailto:jbhammon@umich.edu">jbhammon@umich.edu</a>
-        <div class="social-links">
-          <a href="https://github.com/jbhammon" target="_blank" class="fa fa-github" aria-label="My Github account"></a>
-          <a href="https://medium.com/@malts18" target="_blank" class="fa fa-medium" aria-label="My Medium account"></a>
-          <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target="_blank" class="fa fa-linkedin" aria-label="My LinkedIn account"></a>
+      <div class='containter'>
+        <div class='footer'>
+          <div class ='condensed-text-wrapper' style='margin-bottom: 2rem;'>
+            <p>Connect with me</p>
+            <p>
+              <a href="mailto:jbhammon@umich.edu">email.</a>
+              <a href="https://www.linkedin.com/in/jackson-hammond-b428a481/" target='_blank'>linkedin.</a>
+              <a href="https://github.com/jbhammon" target='_blank'>github.</a>
+            </p>
+          </div>
+          <div class='copy-low-emphasis condensed-text-wrapper'>
+            <p>Built with ❤️ in Ann Arbor</p>
+            <p class="footer-copyright">&#169; 2019 Jackson Hammond</p>
+          </div>
         </div>
-        <small class="footer-copyright">Pulled up with Bootstrap 4 &#169; 2019 Jackson Hammond</small>
       </div>
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <!--- My JavaScript --->
-    <script src="../myscripts.js"></script>
+    <script src="../scripts/myscripts.js"></script>
 
   </body>
 </html>
