implemented page-specific color scheme

--- a/About.html
+++ b/About.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="styles/css/base.css">
     <!-- page-specific styling -->
     <link rel="stylesheet" type="text/css" href="styles/css/projects.css">
+    <link rel="stylesheet" type="text/css" href="styles/css/about.css">
 
     <!-- Typefaces -->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -37,7 +38,7 @@
       <!-- https://www.w3schools.com/howto/howto_js_topnav_responsive.asp -->
       <div class="topnav" id="myTopnav">
         <a class="navbar-brand" aria-label="My Logo" href="#">
-          <img src="assets/SVG/Logo.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
+          <img src="assets/SVG/Logo_color.svg" width="45" height="45" class="d-inline-block align-top" alt="My Logo">
         </a>
         <a href="assets/Jackson_Hammond_Resume.pdf">RESUME</a>
         <a href="About.html">ABOUT</a>
