--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/css/base.css">
     <!-- page-specific styling -->
     <link rel="stylesheet" type="text/css" href="../styles/css/projects.css">
+    <link rel="stylesheet" type="text/css" href="../styles/css/622.css">
 
     <!-- Typefaces -->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
